# dborbit

./: .env.example  README.md  bootstrap_mariadb.py  ctl.sh  dbtool.bootstrap.yml  dbtool.config.example.yml  pyproject.toml  services.yaml
dbtool/: bootstrap.py  cli.py  config.py  constants.py  driver.py  generate.py  history.py  utils.py
dbtool/migrations/: __init__.py  reader.py  runner.py
dbtool/schema/: apply.py  diff.py
src/dborbit/: __init__.py  admin.py  cli.py  manifest.py  schema.py  tracking.py
src/mariadb_bootstrap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
~/dev/madmaxbot/madmaxbot-svc-lovemax/db/schema.sql/db/migrations/: V20250615011832__add_orders_table.sql
